# spykratta

./: .gitignore  CMakeLists.txt  config.h  spy-kratta.files  spy-kratta.includes
automatic/gf5_32k_corrected1dec2004/: gfm.files
src/: ConfigurationFile.cc  ConfigurationFile.h  DataBoard.cpp  DataBoard.h  DataDecoder.cpp  DataDecoder.h  Go4UserAnalysisLinkDef.h  LTBranch.cpp  LTBranch.h  LTRecord.cpp  LTRecord.h  LTable.cpp  LTable.h  MBSc2cpp.h  MainUserAnalysis.cxx  PulseAnalyser.h  RandomGenerator.cc  RandomGenerator.h  Run.cpp  Run.h  SystemsOfUnits.h  T32_signal_module.cxx  T32_signal_module.h  TIFJAnalysis.cxx  TIFJAnalysis.h  TIFJCalibrateFactory.h  TIFJCalibrateProcessor.cxx  TIFJCalibrateProcessor.h  TIFJCalibratedEvent.cxx  TIFJCalibratedEvent.h  TIFJCalibration.cxx  TIFJCalibration.h  TIFJEvent.cxx  TIFJEvent.h  TIFJEventFactory.cxx  TIFJEventFactory.h  TIFJEventProcessor.cxx  TIFJEventProcessor.h  TIFJEventProcessor_OLD.cpp  TIFJPar.h  (+269 more)
